<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="2"
        android:orientation="vertical">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            style="@style/ContactLabelTextView"
            android:id="@+id/nameLabelTextView"
            android:text="@string/label_name" />

        <TextView
            android:text="@string/hint_name_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/ContactTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneLabelTExtView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_phone" />

        <TextView
            android:text="@string/hint_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            style="@style/ContactTextView"
            android:id="@+id/phoneTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_row="2"
            android:id="@+id/emailLabelTextView"
            android:text="@string/label_email" />

        <TextView
            android:text="@string/hint_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextView"
            style="@style/ContactTextView"
            android:layout_column="1"
            android:layout_row="2" />

        <TextView
            android:text="@string/label_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/streetLabelTextView"
            android:layout_row="3"
            android:layout_column="0"
            style="@style/ContactLabelTextView" />

        <TextView
            android:text="@string/hint_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/streetTextView"
            style="@style/ContactTextView"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:text="@string/label_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cityLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_row="4" />

        <TextView
            android:text="@string/hint_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            style="@style/ContactTextView"
            android:id="@+id/cityTextView" />

        <TextView
            android:text="@string/label_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stateLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_row="5" />

        <TextView
            android:text="@string/hint_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stateTextView"
            android:layout_row="5"
            android:layout_column="1"
            style="@style/ContactTextView" />

        <TextView
            android:text="@string/label_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            style="@style/ContactLabelTextView"
            android:id="@+id/zipLabelTextView" />

        <TextView
            android:text="@string/hint_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ContactTextView"
            android:layout_row="6"
            android:layout_column="1"
            android:id="@+id/zipTextView" />

    </GridLayout>
</ScrollView>